Style adjustments to ensure visibility on mobile

--- a/version_control/Codurance_September2020/css/pages/past-events.css
+++ b/version_control/Codurance_September2020/css/pages/past-events.css
@@ -2,7 +2,7 @@
 
 {% set overlap = 200 %}
  
-body {
+.body-wrapper {
   overflow-x: hidden;
 }
 
